changed img src link

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="row">
           <div class="col-sm-12 col-md-12 col-lg-12 align" style= "color:white;" >
             <h1>About Me</h1>
-           <img src="./images/50510645_102984787488409_2384067136906592256_o.jpg" width="180px" height="220px"
+           <img src=".\images\50510645_102984787488409_2384067136906592256_o.jpg" width="180px" height="220px"
            /> <p><b><br>Hello! My name is Ryan Browne. I am currently learning how to do full stack development
              through the University of Toronto's coding bootcamp. I have an extensive backgroud in the following:<br><br>Human Physiology...<br><br>
              1) I am a certified personal trainer. I completed a 1 year program at Bellingham Tech College.<br>
