made some styling changes, and added pdf resume

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <title>Ryan's Developer Portfolio</title>
 </head>
-<body style="background-image: url('images\white_background.jpg');">
+<body class= "container" style="background-image: url('images\white_background.jpg');">
 
   <nav class="navbar navbar-inverse">
     <div class="container-fluid">
@@ -33,14 +33,14 @@
   <div class="container">  
 
     <div class="row" style="color:blueviolet">
-      <div class= "col-sm-12 col-md-4 col-lg-4;"><H1>Phone:  <br><br><a href="./examplehl.html"><u>(905) *** ****</u></a></H1></div>
-        <div class="col-sm-12 col-md-4 col-lg-4;"><h1>Email:  <br><br><a href="./examplehl.html"><u>Ryan******@gmail.com</u></a></h1></div>
-        <div class="col-sm-12 col-md-4 col-lg-4;"><h1>Github: <br><br><a href="./examplehl.html"><u>Ryan********</u></a></h1></div>
+      <div class= "col-sm-12 col-md-4 col-lg-4  contactmargin"><H3>Phone:<br><br><a href="./examplehl.html"><u>(905) *** ****</u></a></H3></div>
+        <div class="col-sm-12 col-md-4 col-lg-4 contactmargin"><h3>Email:<br><br><a href="./examplehl.html"><u>Ryan******@gmail.com</u></a></h3></div>
+        <div class="col-sm-12 col-md-4 col-lg-4 contactmargin"><h3>Github:<br><br><a href="./examplehl.html"><u>Ryan********</u></a></h3></div>
 
         <div class="row" style="color:blueviolet">
-          <div class= "col-sm-12 col-md-4 col-lg-4;"><H1>LinkedIn <br><br><a href="./examplehl.html"><u>Linkedin.com/in/ryan-******-xxx/</u></a></h1></div>
-            <div class="col-sm-12 col-md-4 col-lg-4;"><h1>Facebook:  <br><br><a href="./examplehl.html"><u>Facebook.com/*****</u></a></h1></div>
-            <div class="col-sm-12 col-md-4 col-lg-4;"><h1>Location: <br><br><a href="./examplehl.html"><u>Newmarket, ON, Canada</u></a></h1></div>
+          <div class= "col-sm-12 col-md-4 col-lg-4 contactmargin"><H3>LinkedIn <br><br><a href="./examplehl.html"><u>Linkedin.com/in/ryan-******-xxx/</u></a></h3></div>
+            <div class="col-sm-12 col-md-4 col-lg-4 contactmargin"><h3>Facebook:  <br><br><a href="./examplehl.html"><u>Facebook.com/*****</u></a></h3></div>
+            <div class="col-sm-12 col-md-4 col-lg-4 contactmargin"><h3>Location: <br><br><a href="./examplehl.html"><u>Newmarket, ON, Canada</u></a></h3></div>
 
           
 </div>
