--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <title>Ryan's Developer Portfolio</title>
 </head>
-<body style="background-image: url(https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fwww.clker.com%2Fcliparts%2F1%2F9%2Fa%2F7%2F1391321834608708150fractals.jpg&f=1&nofb=1)">
+<body  class="container"  style="background-image: url('images\download (1).jpg')>
 
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
@@ -32,15 +32,18 @@
         
 
     <div class="container">
-
+<!--https://stark-springs-75145.herokuapp.com/index.html-->
     
-            <div class="row">
-         <div class= "col-sm-12 col-md-6 col-lg-6;"><img src="https://github.com/skar45/Project-2/blob/develop/docs/img/Login.PNG" class="portimages"/></div>
-         <div class="col-sm-12 col-md-6 col-lg-4;"><img src=".\images\placeimg_640_480_tech (5).jpg" class="portimages"/></div>
+            <div class="row move">
+         <div class= "col-sm-12 col-md-6 col-lg-6 box"><h1><a href="https://stark-springs-75145.herokuapp.com/index.html"><b>Chadder Ladder Application</b></a></h1><img src="./images\Chatter_Ladder.png" class="portimages"/></div>
    </div>
 
-   <div class="row">
-    <div class= "col-sm-12 col-md-6 col-lg-6;"><img src=".\images\placeimg_640_480_tech (1).jpg" class="portimages" /></div>
+   <div class="row move">
+    <div class= "col-sm-12 col-md-6 col-lg-6 box"><h1><a href=" https://ryanbrowne360.github.io/WeatherDashboard/"><b>Weather Dashboard Application</b></a></h1><img src="./images\weather_dashboard.png" class="portimages" /></div>
+</div>
+
+<div class="row move">
+    <div class= "col-sm-12 col-md-6 col-lg-6 box"><h1><a href=" https://ryanbrowne360.github.io/Project1/"><b>"What's For Dinner?" Application</b></a></h1><img src="./images\recipe_finder.jpg" class="portimages" /></div>
 </div>
 
  
