css changes to contact page

--- a/portfolio.html
+++ b/portfolio.html
@@ -9,9 +9,9 @@
    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <title>Ryan's Developer Portfolio</title>
 </head>
-<body  class="container"  style="background-image: url('images\download (1).jpg')>
+<body  class="container"  style="background-image: url('images\download (1).jpg')">
 
-    <nav class="navbar navbar-inverse">
+    <nav class= "navbar navbar-inverse">
         <div class="container-fluid">
           <div class="navbar-header">  
           </div>
@@ -32,17 +32,17 @@
         
 
     <div class="container">
-<!--https://stark-springs-75145.herokuapp.com/index.html-->
+
     
-            <div class="row move">
+            <div class="row move portmarg">
          <div class= "col-sm-12 col-md-6 col-lg-6 box"><h1><a href="https://stark-springs-75145.herokuapp.com/index.html"><b>Chadder Ladder Application</b></a></h1><img src="./images\Chatter_Ladder.png" class="portimages"/></div>
    </div>
 
-   <div class="row move">
+   <div class="row move portmarg">
     <div class= "col-sm-12 col-md-6 col-lg-6 box"><h1><a href=" https://ryanbrowne360.github.io/WeatherDashboard/"><b>Weather Dashboard Application</b></a></h1><img src="./images\weather_dashboard.png" class="portimages" /></div>
 </div>
 
-<div class="row move">
+<div class="row move portmarg">
     <div class= "col-sm-12 col-md-6 col-lg-6 box"><h1><a href=" https://ryanbrowne360.github.io/Project1/"><b>"What's For Dinner?" Application</b></a></h1><img src="./images\recipe_finder.jpg" class="portimages" /></div>
 </div>
 
