--- a/contact.html
+++ b/contact.html
@@ -35,30 +35,44 @@
     </nav>
 
     <!--Contact elements-->
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12 col-md-6 col-lg-6 ctext"><b>RyanCodes360@gmail.com</b></div>
+            <div class="col-sm-12 col-md-6 col-lg-6 ctext"><b>I am located in Ontario, Canada</b></div>
+        </div>
+        <div class="row"></div>
+        <div class="col-sm-12 col-md-6 col-lg-6 ctext"><a href="https://github.com/ryanbrowne360"><b>https://github.com/ryanbrowne360</b></a></div>
+        <div class="col-sm-12 col-md-6 col-lg-6 ctext "><a href="http://www.Linkedin.com/in/ryanbrowne360"><b>http://www.Linkedin.com/in/ryanbrowne360</b></a></div>
+    </div>
+    </div>
 
+
+
+
+    <!--
     <div class="container">
         <div class="row">
 
             <div class="col-sm-12 col-md-3 col-lg-3">
-                <h3></h3><b style="color:blueviolet">RyanCodes360@gmail.com</b>
+                <h3><b style="color:blueviolet">RyanCodes360@gmail.com</b></h3>
             </div>
-            </h3>
-        </div>
-        <div class="col-sm-12 col-md-3 col-lg-3"><b style="color:blueviolet">I am located in Newmarket,
-                ON, Canada</b></div>
-    </div>
-    <div class="col-sm-12 col-md-3col-lg-3"><a href="https://github.com/ryanbrowne360"><u
-                style="color:blueviolet"><b>GitHub</b></u></a></h3>
-        <div class="col-sm-12 col-md-6 col-lg-6">
-            <H3><a href="http://www.Linkedin.com/in/ryanbrowne360"><u style="color:blueviolet"><b>LinkedIn</b></u></a>
-            </h3>
-        </div>
 
-    </div>
-    </div>
+            <div class="col-sm-12 col-md-3 col-lg-3"><b style="color:blueviolet">I am located in Newmarket,
+                    ON, Canada</b></div>
+
+        <div class="col-sm-12 col-md-3col-lg-3"><a href="https://github.com/ryanbrowne360"><u
+                    style="color:blueviolet"><b>GitHub</b></u></a></h3> </div>
+
+            <div class="col-sm-12 col-md-6 col-lg-6">
+                <H3><a href="http://www.Linkedin.com/in/ryanbrowne360"><u
+                            style="color:blueviolet"><b>LinkedIn</b></u></a>
+                </h3>
+            </div>
+
+        </div>
+    </div> -->
 
     <div class="container">
-
         <form>
             <div class="form-group align">
                 <h1>Contact</h1>
